SLING-9406 - Add bundled script support to the servlets resolver
* renamed the BundledScriptFinder interface to BundledRenderUnitFinder
* added more JavaDocs where missing
* added versioning annotations (Provider, Consumer)